practice/traffic/task-3/ingress-advanced.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  labels:
    mmelab.io/task: traffic-task-3
    mmelab.io/app: demo-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /try-to-find-me/here-i-am
  namespace: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: <IP>.nip.io
    http:
      paths:
      - path: /(.*)/what-path-it-is
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo-app
            port:
              number: 8080
